# digimon-deck-list-builder

./: .gitignore  .gitmodules  ACTION_SPEC.md  AGENTS.md  CLAUDE.md  Q-Rec Agent Notes  README.md  RULES_CONTEXT.md  TENSOR_SPEC.md  UI_PLAN.md  digimon-deck-list-builder-1.sln  pyproject.toml  requirements.txt
Digimon.Core/: ACTION_MAPPING.md  ActionDecoder.cs  BOARD_STATE_TENSOR.md  BaseGameRunner.cs  Card.cs  CardFeatureExporter.cs  CardRegistry.cs  Game.cs  HeadlessGame.cs  InteractiveGame.cs  Permanent.cs  Player.cs  PlayerType.cs  TurnStateMachine.cs  Verification.cs
Digimon.Core/Constants/: CardColor.cs  CardKeyword.cs  CardKind.cs  EffectTiming.cs  GamePhase.cs
Digimon.Core/Loggers/: GameLogger.cs
Scripts/Headless/: DCGOAdapterStubs.cs  DigimonRLAdapter.cs  HeadlessComponents.cs  HeadlessGameManager.cs  MCTSAgent.cs
digimon_gym/: api.py  csharp_wrapper.py  digimon_gym.py  test_structure.py  verify_actions.py  verify_attack.py  verify_digivolve.py  verify_gym.py
digimon_gym/agents/: __init__.py  (+1 more)
frontend/: index.html  package-lock.json  package.json  vite.config.js
python_impl/: api.py  csharp_wrapper.py  digimon_gym.py  headless_runner.py  simple_sim.py  test_structure.py  verify_logging.py
scripts/: close_stale_prs.sh  fetch_card_effects.py  train_smoke_test.py
tests/: test_bt14_scripts.py  test_bt20_scripts.py  test_bt24_scripts.py  test_digivolve_validation.py  test_dna_digivolve.py  test_phase_decoders.py  test_rl_gym.py  test_runners.py  test_tensor_and_actions.py
tools/: ingest_bt14_cards.py  ingest_cards.py  transpile_dcgo.py
(+528 files in other folders)
